--- a/product-intro_B-2.html
+++ b/product-intro_B-2.html
@@ -47,8 +47,7 @@
           <a href="#" class="has-sub">- 제품소개</a>
           <ul class="sub-dropdown">
             <li><a href="product-intro_B-1.html">전열교환기</a></li>
-            <li><a href="product-intro_B-2.html">제품 장점</a></li>
-            <li><a href="product-intro_B-3.html">사용방법 및 유지관리</a></li>
+            <li><a href="product-intro_B-2.html">장비구성 및 유지관리</a></li>
           </ul>
         </li>
         <li><a href="product-types-B.html">- 제품 종류 및 사양</a></li>
@@ -108,8 +107,7 @@
           <button class="sub-dropdown-btn">- 제품소개</button>
           <ul class="sub-dropdown-content">
             <li><a href="product-intro_B-1.html">전열교환기</a></li>
-            <li><a href="product-intro_B-2.html">제품 장점</a></li>
-            <li><a href="product-intro_B-3.html">사용방법 및 유지관리</a></li>
+            <li><a href="product-intro_B-2.html">장비구성 및 유지관리</a></li>
           </ul>
         </li>
         <li><a href="product-types-B.html">- 제품 종류 및 사양</a></li>
@@ -138,62 +136,145 @@
 
     <!-- 파란 배경 제목 -->
     <section class="blue-title">
-      <h1>제품소개</h1>
-      <p>전열교환기의 필요성부터 구조, 기능, 관리까지 한눈에</p>
+      <h1>장비구성 및 유지관리</h1>
+      <p>쾌적한 실내공기를 위한 핵심, 열회수형 환기장치의 관리 방법과 내부 구성품 한눈에 알아보세요.</p>
     </section>
 
     <!-- 서브탭 메뉴 -->
-  <nav class="submenu">
-      <a href="product-intro_B-1.html" class="active">전열교환기</a>
-      <a href="product-intro_B-2.html">제품 장점</a>
-      <a href="product-intro_B-3.html">사용방법 및 유지관리</a>
+    <nav class="submenu">
+      <a href="product-intro_B-1.html">전열교환기</a>
+      <a href="product-intro_B-2.html" class="active">장비구성 및 유지관리</a>
     </nav>
 
- <style>
-    body {
-      margin: 0;
-      font-family: 'Pretendard', 'Noto Sans KR', sans-serif;
-      background-color: #f9f9f9;
-      color: #333;
-      text-align: center;
-      padding: 80px 20px;
-    }
+    
 
-    .notice-container {
-      max-width: 600px;
-      margin: 0 auto;
-    }
 
-    .notice-container h1 {
-      font-size: 2.4rem;
-      margin-bottom: 20px;
-    }
 
-    .notice-container p {
-      font-size: 1.1rem;
-      color: #666;
-    }
-
-    .coming-soon-badge {
-      display: inline-block;
-      margin-top: 40px;
-      padding: 12px 24px;
-      background-color: #eee;
-      border-radius: 30px;
-      font-size: 1rem;
-      color: #888;
-      letter-spacing: 1px;
-    }
-  </style>
-</head>
-<body>
-  <div class="notice-container">
-    <h1>이 페이지는 현재 준비 중입니다.</h1>
-    <p>제품 구성도에 대한 정보는 곧 업데이트될 예정입니다.</p>
-    <div class="coming-soon-badge">COMING SOON</div>
+<!-- ✅ 소모품 관리 섹션 -->
+<section class="intro-section">
+  <div class="description">
+    <p>실내외 공기의 교차 순환을 통해 에너지를 절약하고,
+        항상 신선한 공기를 유지하려면 정기적인 유지관리가 필수입니다.
+        필터 및 열교환기의 관리 주기와 장비의 구성 요소에 대해 안내드립니다.</p>
   </div>
-</body>
-</html>
+
+  <h3>- 소모품 관리 -</h3>
+  <img src="images/8.png" alt="소모품 흐름도" />
+
+  <table>
+    <thead>
+      <tr>
+        <th>구분</th>
+        <th>청소주기</th>
+        <th>교환주기</th>
+        <th>비고</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>필터</td>
+        <td>4회/년</td>
+        <td>1년</td>
+        <td rowspan="2">사용 환경 및 오염도에 따라 교환주기가 달라질 수 있습니다.</td>
+      </tr>
+      <tr>
+        <td>전열교환기</td>
+        <td>1회/년</td>
+        <td>3~5년</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <p class="note">
+    <strong>주의사항 </strong>
+    제품 사용 환경(예: 도로변, 공사장 인근, 산업지역 등)에 따라 필터 및 열교환기의 오염도는 크게 달라질 수 있습니다.
+    정기적인 점검을 통해 교체 주기를 유연하게 조정하는 것이 좋습니다.
+  </p>
+
+  <div class="section-divider"></div>
+</section>
+
+<!-- ✅ 장비 구성 섹션 (소모품 관리와 같은 구성) -->
+<section class="product-content">
+  <div class="description-wrap">
+    <p class="description">
+      장비의 내부는 점검도어, 필터, 열교환기, 전원부, PCB박스 등으로 구성되어 있으며,<br>
+      각 구성품은 고유한 기능을 가지고 있어 유지보수 시 이해가 필요합니다.
+    </p>
+  </div>
+
+  <h3>- 장비구성 및 기능 -</h3>
+  <div class="image-box">
+    <img src="images/9.png" alt="장비 구성도 이미지" />
+  </div>
+
+  <div class="table-box">
+    <table>
+      <thead>
+        <tr>
+          <th>구분</th>
+          <th>기능</th>
+          <th>비고</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>본체</td>
+          <td>CONTROL을 제외한 팬모터 및 열교환기,<br>프리필터와 전원부가 내장되어 있습니다.</td>
+          <td>사용자 분해 및 개조금지</td>
+        </tr>
+        <tr>
+          <td>급기구(S.A)</td>
+          <td>외부에서 들어온 공기가 열교환기를 거쳐 내부로 공급됩니다.</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>배기구(R.A)</td>
+          <td>실내의 공기를 흡입합니다.</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>외기구(O.A)</td>
+          <td>외부의 공기를 흡입합니다.</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>환기구(E.A)</td>
+          <td>실내에서 흡입된 공기가 열교환기를 거쳐 외부로 배출됩니다.</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>열교환기</td>
+          <td>실내공기와 외부공기가 서로 교차하여 배출되며,<br>공기가 가진 에너지를 흡수하여 실내로 공급됩니다.</td>
+          <td>주기적인 점검필요</td>
+        </tr>
+        <tr>
+          <td>필터</td>
+          <td>외부(실내)에서 유입되는 공기중의 분진으로부터 열교환기를 보호하고<br>실내로 깨끗한 공기를 공급합니다.</td>
+          <td>주기적인 점검필요</td>
+        </tr>
+        <tr>
+          <td>점검도어</td>
+          <td>전열교환기나 필터의 청소나 교환시에 개방합니다.</td>
+          <td>장비설치시 점검구 확보</td>
+        </tr>
+        <tr>
+          <td>PCB 박스</td>
+          <td>CONTROL과 통신 및 전원을 공급하는 전기 기판이 내장되어있습니다.</td>
+          <td>장비설치시 점검구 확보</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <p class="note">
+    <strong>주의사항 </strong>
+    장비의 내부는 점검도어, 필터, 열교환기, 전원부, PCB박스 등으로 구성되어 있으며,
+    각 구성품은 고유한 기능을 가지고 있어 유지보수 시 이해가 필요합니다.
+  </p>
+</section>
+
+
 
     <!--하단-->
     <footer>
