--- a/product-intro_B-1.html
+++ b/product-intro_B-1.html
@@ -47,8 +47,7 @@
           <a href="#" class="has-sub">- 제품소개</a>
           <ul class="sub-dropdown">
             <li><a href="product-intro_B-1.html">전열교환기</a></li>
-            <li><a href="product-intro_B-2.html">제품 장점</a></li>
-            <li><a href="product-intro_B-3.html">사용방법 및 유지관리</a></li>
+            <li><a href="product-intro_B-2.html">장비구성 및 유지관리</a></li>
           </ul>
         </li>
         <li><a href="product-types-B.html">- 제품 종류 및 사양</a></li>
@@ -108,8 +107,7 @@
           <button class="sub-dropdown-btn">- 제품소개</button>
           <ul class="sub-dropdown-content">
             <li><a href="product-intro_B-1.html">전열교환기</a></li>
-            <li><a href="product-intro_B-2.html">제품 장점</a></li>
-            <li><a href="product-intro_B-3.html">사용방법 및 유지관리</a></li>
+            <li><a href="product-intro_B-2.html">장비구성 및 유지관리</a></li>
           </ul>
         </li>
         <li><a href="product-types-B.html">- 제품 종류 및 사양</a></li>
@@ -144,56 +142,9 @@
     <!-- 서브탭 메뉴 -->
   <nav class="submenu">
       <a href="product-intro_B-1.html" class="active">전열교환기</a>
-      <a href="product-intro_B-2.html">제품 장점</a>
-      <a href="product-intro_B-3.html">사용방법 및 유지관리</a>
+      <a href="product-intro_B-2.html">장비구성 및 유지관리</a>
     </nav>
 
-
- <style>
-    body {
-      margin: 0;
-      font-family: 'Pretendard', 'Noto Sans KR', sans-serif;
-      background-color: #f9f9f9;
-      color: #333;
-      text-align: center;
-      padding: 80px 20px;
-    }
-
-    .notice-container {
-      max-width: 600px;
-      margin: 0 auto;
-    }
-
-    .notice-container h1 {
-      font-size: 2.4rem;
-      margin-bottom: 20px;
-    }
-
-    .notice-container p {
-      font-size: 1.1rem;
-      color: #666;
-    }
-
-    .coming-soon-badge {
-      display: inline-block;
-      margin-top: 40px;
-      padding: 12px 24px;
-      background-color: #eee;
-      border-radius: 30px;
-      font-size: 1rem;
-      color: #888;
-      letter-spacing: 1px;
-    }
-  </style>
-</head>
-<body>
-  <div class="notice-container">
-    <h1>이 페이지는 현재 준비 중입니다.</h1>
-    <p>제품 구성도에 대한 정보는 곧 업데이트될 예정입니다.</p>
-    <div class="coming-soon-badge">COMING SOON</div>
-  </div>
-</body>
-</html>
 
     <!--하단-->
     <footer>
